# plugwerk-server/plugwerk-server-backend/src/main/kotlin/io/plugwerk/server/service/PluginReleaseService.kt
@@ -189,7 +189,6 @@ class PluginReleaseService(
                         homepage = descriptor.homepage,
                         repository = descriptor.repository,
                         icon = descriptor.icon,
-                        categories = descriptor.categories.toTypedArray(),
                         tags = descriptor.tags.toTypedArray(),
                     ),
                 )
